1) Was renamed "Export database" to "Create backup" and "Import database" to "Restore from backup" 2) Was added opportunity set name of backup file through alert controller. 3) Was added new table view Backups Table View Controller that contain a list of backups at app dictionary 4) Was done restore database base on chosen backup file.

--- a/Your Vocabulary/MVC/Views/Base.lproj/Settings.storyboard
+++ b/Your Vocabulary/MVC/Views/Base.lproj/Settings.storyboard
@@ -80,7 +80,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Export database" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="oyl-wv-hfY">
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Create backup" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="oyl-wv-hfY">
                                                     <rect key="frame" x="16" y="0.0" width="343" height="43.5"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -176,10 +176,55 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Settings" id="Jcz-Ax-iC1"/>
+                    <connections>
+                        <segue destination="5of-MZ-YkQ" kind="show" identifier="showBackups" id="030-Gq-8rg"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4is-r0-M2H" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1158" y="810"/>
+        </scene>
+        <!--Backups Table View Controller-->
+        <scene sceneID="IwF-Cv-94H">
+            <objects>
+                <tableViewController id="5of-MZ-YkQ" customClass="BackupsTableViewController" customModule="Your_Vocabulary" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="ING-JM-fzQ">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="BackupCell" textLabel="rqe-uc-k2J" style="IBUITableViewCellStyleDefault" id="JfQ-7a-dQ0">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="JfQ-7a-dQ0" id="y1I-zu-F2p">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="rqe-uc-k2J">
+                                            <rect key="frame" x="16" y="0.0" width="343" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="5of-MZ-YkQ" id="XQI-9J-tKa"/>
+                            <outlet property="delegate" destination="5of-MZ-YkQ" id="wWi-2r-IqT"/>
+                        </connections>
+                    </tableView>
+                    <connections>
+                        <segue destination="YhO-IK-zzK" kind="unwind" identifier="finishRestoringFromBackup" unwindAction="finishRestoringBackupWithSegue:" id="HWG-3w-fHf"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="XKg-fP-ehn" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="YhO-IK-zzK" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="1942" y="1093"/>
         </scene>
         <!--Language-->
         <scene sceneID="XAx-GN-Ed0">
@@ -240,7 +285,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EDR-Mn-UrI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2051" y="418"/>
+            <point key="canvasLocation" x="1942" y="331"/>
         </scene>
         <!--Settings-->
         <scene sceneID="K7A-b3-fuP">
