1)Was implemented on boarding screen during first launch 2)Was added opportunity to review on boarding screens from the settings

--- a/Your Vocabulary/MVC/Views/Base.lproj/Settings.storyboard
+++ b/Your Vocabulary/MVC/Views/Base.lproj/Settings.storyboard
@@ -148,6 +148,11 @@
                                             </subviews>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <connections>
+                                            <segue destination="yrW-Ma-FqE" kind="popoverPresentation" popoverAnchorView="QFe-Xz-xeL" id="65g-TC-Per">
+                                                <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
+                                            </segue>
+                                        </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="EvaluateAppSettings" textLabel="RGk-dx-xmC" style="IBUITableViewCellStyleDefault" id="s0n-Cv-ue0">
                                         <rect key="frame" x="0.0" y="431.5" width="375" height="44"/>
@@ -183,6 +188,14 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4is-r0-M2H" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1158" y="810"/>
+        </scene>
+        <!--AppOnboarding-->
+        <scene sceneID="WLK-We-vKz">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Main" referencedIdentifier="AppOnboarding" id="yrW-Ma-FqE" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yzn-Ps-ItZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1942" y="809"/>
         </scene>
         <!--Backups Table View Controller-->
         <scene sceneID="IwF-Cv-94H">
@@ -224,7 +237,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XKg-fP-ehn" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="YhO-IK-zzK" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="1942" y="1093"/>
+            <point key="canvasLocation" x="1942" y="1265"/>
         </scene>
         <!--Language-->
         <scene sceneID="XAx-GN-Ed0">
