--- a/Your Vocabulary/MVC/Views/Base.lproj/Main.storyboard
+++ b/Your Vocabulary/MVC/Views/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ifo-ul-Ec4">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -374,10 +374,54 @@
             </objects>
             <point key="canvasLocation" x="2898.4000000000001" y="-156.65024630541873"/>
         </scene>
+        <!--App Onboarding View Controller-->
+        <scene sceneID="nge-Ff-lo0">
+            <objects>
+                <viewController storyboardIdentifier="AppOnboarding" id="j14-Io-J0q" customClass="AppOnboardingViewController" customModule="Your_Vocabulary" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="KWe-Ag-EUv">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="243-5q-a3b" customClass="AppOnboardingView" customModule="Your_Vocabulary" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
+                            <button opaque="NO" alpha="0.0" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T82-Wb-2p6">
+                                <rect key="frame" x="113.66666666666669" y="681" width="148" height="47"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="15"/>
+                                <state key="normal" title="Get started" backgroundImage="dark_blue_button">
+                                    <color key="titleColor" red="1" green="0.83137254900000002" blue="0.45882352939999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="onboardingWasComplited:" destination="j14-Io-J0q" eventType="touchUpInside" id="yp6-0k-zgn"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="VvR-hi-Lgv" firstAttribute="bottom" secondItem="T82-Wb-2p6" secondAttribute="bottom" constant="50" id="09I-mW-osq"/>
+                            <constraint firstItem="T82-Wb-2p6" firstAttribute="centerX" secondItem="VvR-hi-Lgv" secondAttribute="centerX" id="KjL-uA-8WO"/>
+                            <constraint firstItem="243-5q-a3b" firstAttribute="leading" secondItem="VvR-hi-Lgv" secondAttribute="leading" id="Lpf-18-Xor"/>
+                            <constraint firstItem="243-5q-a3b" firstAttribute="trailing" secondItem="VvR-hi-Lgv" secondAttribute="trailing" id="Mry-eO-OxR"/>
+                            <constraint firstAttribute="bottom" secondItem="243-5q-a3b" secondAttribute="bottom" id="cyw-B9-5dA"/>
+                            <constraint firstItem="243-5q-a3b" firstAttribute="top" secondItem="KWe-Ag-EUv" secondAttribute="top" id="hoZ-u9-9NR"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="VvR-hi-Lgv"/>
+                    </view>
+                    <connections>
+                        <outlet property="getStartedButton" destination="T82-Wb-2p6" id="IxC-Wh-IOv"/>
+                        <outlet property="onboardingView" destination="243-5q-a3b" id="U2e-hm-pFi"/>
+                        <segue destination="ifo-ul-Ec4" kind="show" identifier="startApp" id="A0U-Sj-7Qk"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Kn1-sG-QRC" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1628" y="-157.38916256157637"/>
+        </scene>
         <!--Your Vocabulary Tab Bar Controller-->
         <scene sceneID="kdl-lf-YXt">
             <objects>
-                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="ifo-ul-Ec4" customClass="YourVocabularyTabBarController" customModule="Your_Vocabulary" customModuleProvider="target" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="MainApp" automaticallyAdjustsScrollViewInsets="NO" id="ifo-ul-Ec4" customClass="YourVocabularyTabBarController" customModule="Your_Vocabulary" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" translucent="NO" itemPositioning="centered" id="dic-ta-2cg">
                         <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
@@ -870,7 +914,7 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="geM-mf-3Kb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-924" y="406"/>
+            <point key="canvasLocation" x="-661" y="432"/>
         </scene>
         <!--Statistic-->
         <scene sceneID="Kig-T3-ir2">
@@ -882,7 +926,7 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Xs4-7m-2Ri" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-685" y="432"/>
+            <point key="canvasLocation" x="-449" y="432"/>
         </scene>
         <!--Settings-->
         <scene sceneID="cr1-lv-OBT">
@@ -894,7 +938,7 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3FO-b6-eff" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-444" y="432"/>
+            <point key="canvasLocation" x="-919" y="432"/>
         </scene>
     </scenes>
     <resources>
